<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:text="@string/login"
        android:paddingTop="20dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enterEmail"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/editEmail"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:hint="@string/enterPass"/>

    <Switch
        android:id="@+id/sw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/remember"
        />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sw1"
        android:text="@string/btnEnter" />

    </RelativeLayout>
</RelativeLayout>