<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SingInActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="409dp"
                android:layout_height="177dp"
                app:srcCompat="@drawable/ic_launcher"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="1dp"
                android:contentDescription="@string/titleRegister"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleRegister"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="196dp"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="@string/hintName"
                android:autofillHints="@string/hintName"/>
            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintLastName"
                android:inputType="text"
                android:autofillHints="@string/hintLastName"/>
            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:hint="@string/hintPhone"
                android:autofillHints="@string/hintPhone"/>
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hintEmail"
                android:autofillHints="@string/hintEmail"/>
            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/hintPass"
                android:autofillHints="@string/hintPass"/>
            <EditText
                android:id="@+id/editConfPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:hint="@string/hintConfPass"
                android:autofillHints="@string/hintConfPass" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:background="@color/colorScreenSplash"
                android:textColor="#fff"
                android:layout_marginTop="20sp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>