<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                tools:src="@drawable/power_girl" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleProfile"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="196dp"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/editNameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="@string/hintName"
                android:autofillHints="@string/hintName"/>
            <EditText
                android:id="@+id/editLastNameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintLastName"
                android:inputType="text"
                android:autofillHints="@string/hintLastName"/>
            <EditText
                android:id="@+id/editPhoneProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:hint="@string/hintPhone"
                android:autofillHints="@string/hintPhone"/>
            <EditText
                android:id="@+id/editEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hintEmail"
                android:autofillHints="@string/hintEmail"/>
            <EditText
                android:id="@+id/editPassProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/hintPass"
                android:autofillHints="@string/hintPass"/>
            <Button
                android:id="@+id/btnRegisterProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:background="@color/colorScreenSplash"
                android:textColor="#fff"
                android:layout_marginTop="20sp"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>