<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/titleForm"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@color/colorScreenSplash"
        android:textColor="#fff"
        />
    <EditText
        android:id="@+id/txtTitleNotify"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/titleNotify" />
    <EditText
        android:id="@+id/txtDescriptionNotify"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:maxHeight="100dp"
        android:hint="@string/descriptionNotify"/>
</LinearLayout>
